Fix monument card heading padding to not overlap with trash icon

--- a/src/monument/components/MonumentCard/MonumentCard.css
+++ b/src/monument/components/MonumentCard/MonumentCard.css
@@ -11,6 +11,7 @@
   font-size: 1.875rem;
   text-transform: capitalize;
   align-self: flex-start;
+  padding-right: 5px;
 }
 
 .monument__delete {
